--- a/persistent-volume/pv.yaml
+++ b/persistent-volume/pv.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     type: local
 spec:
-  storageClassName: NFSMOUNT
+  storageClassName: nfsmount
   capacity:
     storage: 500Mi
   accessModes:
