--- a/pod/2-nginx-svc.yaml
+++ b/pod/2-nginx-svc.yaml
@@ -2,15 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nginx-svc
-  namespace: ram-ns
   labels:
-    app: nginx
+    run: nginx
 spec:
+  selector:
+    run: nginx
   type: LoadBalancer
   ports:
-  - nodePort: 32643
-    port: 80
-    protocol: TCP
-    targetPort: 80
-  selector:
-    app: nginx
+    - port: 80
+      protocol: TCP
+      targetPort: 80
