--- a/pod/1-nginx-pod.yaml
+++ b/pod/1-nginx-pod.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: nginx-pod
-  namespace: ram-ns
+  creationTimestamp: null
   labels:
-    app: nginx
+    run: nginx
+  name: nginx
 spec:
   containers:
-  - image: docker.io/nginx:latest
+  - image: nginx:latest
     name: nginx
- 
+    ports:
+    - containerPort: 80
