--- a/nfs-server-provisioner/class.yaml
+++ b/nfs-server-provisioner/class.yaml
@@ -1,7 +1,9 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: nfs-dynamic-volume 
-provisioner: kube-master.lab.net/nfs
+  name: nfs-storage
+  annotations:
+    storageclass.kubernetes.io/is-default-class: "true"
+provisioner: nfs-storage-provisioner
 parameters:
   archiveOnDelete: "false"
