--- a/nfs-server-provisioner/pvc.yaml
+++ b/nfs-server-provisioner/pvc.yaml
@@ -1,11 +1,10 @@
-apiVersion: v1
 kind: PersistentVolumeClaim
+apiVersion: v1
 metadata:
-  name: pvc-nfs-pv1
+  name: test-claim
 spec:
-  storageClassName: nfs-dynamic-volume
   accessModes:
     - ReadWriteMany
   resources:
     requests:
-      storage: 100Mi
+      storage: 1Mi
